@@ -28,12 +28,9 @@ const PaymentRequestExpressComponent = ( {
 } ) => {
 	// TODO: Don't display custom button when result.requestType
 	// is `apple_pay` or `google_pay`.
-	// TODO: Add loading indicator when isProcessing.
 	const {
 		paymentRequest,
 		// paymentRequestType,
-		// isProcessing,
-		canMakePayment,
 		onButtonClick,
 	} = useInitialization( {
 		api,
@@ -57,7 +54,7 @@ const PaymentRequestExpressComponent = ( {
 		},
 	};
 
-	if ( ! canMakePayment || ! paymentRequest ) {
+	if ( ! paymentRequest ) {
 		return null;
 	}
 
